footer below gap correction

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -389,6 +389,7 @@
 
   footer{
     background-color: #192a34;
+    bottom:0;
   }
 
   footer p{
